<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/shopping_list_header"
        android:layout_width="112dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/shopping_list_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopping_list_header" />

    <TextView
        android:id="@+id/item2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item1" />

    <TextView
        android:id="@+id/item4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item3" />

    <TextView
        android:id="@+id/item5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item4"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/item3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item2" />

    <TextView
        android:id="@+id/item6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item1"
        app:layout_constraintTop_toTopOf="@+id/item1" />


    <TextView
        android:id="@+id/item7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/item2"
        app:layout_constraintTop_toBottomOf="@+id/item6" />

    <TextView
        android:id="@+id/item8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/item3"
        app:layout_constraintTop_toBottomOf="@+id/item7" />

    <TextView
        android:id="@+id/item9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/item4"
        app:layout_constraintTop_toBottomOf="@+id/item8" />

    <TextView
        android:id="@+id/item10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/item5"
        app:layout_constraintTop_toBottomOf="@+id/item9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_main"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:onClick="launchSecondActivity"
        android:text="@string/items"
        app:layout_constraintBaseline_toBaselineOf="@+id/clear_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="116dp"
        android:onClick="resetList"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/search_for_store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main"
         />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="searchStores"
        app:layout_constraintBaseline_toBaselineOf="@+id/store_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toEndOf="@+id/store_name" />

</androidx.constraintlayout.widget.ConstraintLayout>